--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -17,7 +17,7 @@
       </div>
 
       <div class="mr-4">
-        <%= label_tag :train, "Train", class: "label" %>
+        <%= label_tag :train, "Train(s)", class: "label" %>
         <%= text_field_tag :train,
                         params[:train],
                         include_blank: true,
