--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -31,6 +31,17 @@
     <%= form.check_box :admin, class: "block mt-2 h-5 w-5" %>
   </div>
 
+  <% if user.new_record? %>
+    <div class="my-5">
+      <%= form.label :password, label:'Mot de passe' %>
+      <%= form.password_field :password, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    </div>
+    <div class="my-5">
+      <%= form.label :password_confirmation, label:'Confirmation de mot de passe' %>
+      <%= form.password_field :password_confirmation, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    </div>
+  <% end %>
+
   <div class="inline">
     <%= form.submit "Enregistrer cet utilisateur", class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
   </div>
