--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -97,14 +97,13 @@
   <p class="mt-4">
     <%= link_to 'Export XLS', url_for(params.permit!.merge(format: :xls)) %>
     |
-    <%= link_to 'Export XLS(+informations.json)', url_for(params.permit!.merge(format: :xls, with_payload: true)) %>
+    <%= link_to 'Export XLS (+Json)', url_for(params.permit!.merge(format: :xls, with_payload: true)) %>
     |
     Source :
     <%= link_to 'm.ter.sncf.com',
                 'https://m.ter.sncf.com/grand-est/se-deplacer/prochains-departs/strasbourg-87212027',
                 target: '_blank' %>
   </p>
-
 </div>
 
 <script type="text/javascript">
