--- a/app/views/disturbances/show.html.erb
+++ b/app/views/disturbances/show.html.erb
@@ -84,7 +84,9 @@
 
     </div>
 
-    <%= link_to 'Éditer cette disturbance', edit_disturbance_path(@disturbance), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <% if policy(@disturbance).edit? %>
+      <%= link_to 'Éditer cette disturbance', edit_disturbance_path(@disturbance), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <% end %>
     <%= link_to 'Retour aux disturbances', root_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium mb-4" %>
 
     <% if @disturbance.information_payload %>
