--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 mt-8">
-  <div class="flex justify-between items-center">
+  <div class="flex justify-between items-center mb-4">
     <h1 class="font-bold text-4xl">Status</h1>
   </div>
 
@@ -30,7 +30,8 @@
             <%= disturbance.information %>
             <br>
           <% end %>
-          <%= time_tag disturbance.created_at, "data-local": "time-ago" %>
+          <br>
+          <i>Enregistré <%= time_tag disturbance.created_at, "data-local": "time-ago" %></i>
         </div>
       </div>
     <% end %>
