collected_at fix

--- a/app/views/sources/_source.html.erb
+++ b/app/views/sources/_source.html.erb
@@ -18,7 +18,9 @@
   <p class="my-5">
     <strong class="block font-medium mb-1">Dernière collecte:</strong>
     <%= source.collected_at %>
-    (<i><%= time_tag source.collected_at, "data-local": "time-ago" %></i>)
+    <% if source.collected_at %>
+      (<i><%= time_tag source.collected_at, "data-local": "time-ago" %></i>)
+    <% end %>
   </p>
 
   <% if action_name != "show" %>
