target blank fix

--- a/app/views/sources/_source.html.erb
+++ b/app/views/sources/_source.html.erb
@@ -12,7 +12,7 @@
 
   <p class="my-5">
     <strong class="block font-medium mb-1">Url:</strong>
-    <%= link_to source.url, source.url %>
+    <%= link_to source.url, source.url, target: '_blank' %>
   </p>
 
   <p class="my-5">
