--- a/app/views/sources/_source.html.erb
+++ b/app/views/sources/_source.html.erb
@@ -19,7 +19,9 @@
     <strong class="block font-medium mb-1">Dernière collecte:</strong>
     <%= source.collected_at %>
     <% if source.collected_at %>
-      (<i><%= time_tag source.collected_at, "data-local": "time-ago" %></i>)
+      <span class="<%= ((DateTime.now.to_i - source.collected_at.to_i) > 15.minutes) ? 'bg-red-200' : 'bg-green-200' %>">
+        ( <i><%= time_tag source.collected_at, "data-local": "time-ago" %></i> )
+      </span>
     <% end %>
   </p>
 
