--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
   <body>
     <%= render partial: "partials/navbar" %>
     <%= render partial: "partials/notification" %>
-    <main class="container mx-auto">
+    <main class="container mx-auto px-2">
       <%= yield %>
     </main>
   </body>
