--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -1,5 +1,5 @@
-<div class="mx-auto md:w-2/3 mt-8">
-  <div class="flex justify-between items-center mb-4">
+<div class="mx-auto md:w-2/3 mt-1">
+  <div class="flex items-center mb-4">
     <h1 class="font-bold text-4xl">Gares en direct</h1>
   </div>
 
