--- a/app/views/sources/_source.html.erb
+++ b/app/views/sources/_source.html.erb
@@ -1,22 +1,17 @@
 <div id="<%= dom_id source %>">
 
-  <p class="my-5">
-    <strong class="block mb-1">Gare:</strong>
-    <%= source.gare %>
+  <p class="my-4 text-xl">
+    <strong><%= source.gare %></strong>
+    (<%= source.sens %>)
   </p>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Sens:</strong>
-    <%= source.sens %>
-  </p>
-
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Url:</strong>
+  <p class="my-4">
+    <strong class="font-medium mb-1">URL : </strong>
     <%= link_to source.url, source.url, target: '_blank' %>
   </p>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Dernière collecte:</strong>
+  <p class="my-4">
+    <strong class="font-medium mb-1">Dernière collecte : </strong>
     <%= source.collected_at %>
     <% if source.collected_at %>
       <span class="<%= ((DateTime.now.to_i - source.collected_at.to_i) > 15.minutes) ? 'bg-red-200' : 'bg-green-200' %>">
@@ -26,8 +21,8 @@
   </p>
 
   <% if action_name != "show" %>
-    <%= link_to "Voir cette source", source, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Éditer cette source', edit_source_path(source), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to "Voir cette source", source, class: "btn-sm rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+    <%= link_to 'Éditer cette source', edit_source_path(source), class: "btn-sm rounded-lg py-3 ml-2 px-5 bg-gray-100 font-medium" %>
     <hr class="mt-6">
   <% end %>
 </div>
