--- a/app/views/sources/show.html.erb
+++ b/app/views/sources/show.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full flex">
-  <div class="mx-auto">
+  <div>
     <%= render @source %>
 
     <%= link_to 'Éditer cette source', edit_source_path(@source), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
