--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -1,7 +1,7 @@
 <div class="mx-auto md:w-2/3 mt-8">
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Sources</h1>
-    <%= link_to 'Nouvelle source', new_source_path, class: "btn btn-xs btn-outline btn-primary" %>
+    <%= link_to 'Nouvelle source', new_source_path, class: "btn btn-outline btn-primary" %>
   </div>
 
   <div id="sources">
