Status sans doublons

--- a/app/views/sources/_form.html.erb
+++ b/app/views/sources/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="my-5">
-    <%= form.label :url %>
+    <%= form.label :url, 'URL' %>
     <%= form.text_field :url, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
