--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -3,38 +3,49 @@
     <h1 class="font-bold text-4xl">Gares en direct</h1>
   </div>
 
-  <% @sources.each do |source| %>
-    <% disturbance = source.last_disturbance %>
-    <div tabindex="0" class="<%= 'collapse collapse-arrow' if disturbance %> border border-base-300 rounded-box">
-      <div class="collapse-title text-xl font-medium">
-        <span style="<%= disturbance ? disturbance.perturbation_style : 'color: forestgreen;' %>">
-          <%= source.sens_et_gare %>
-        </span>
-      </div>
-      <% if disturbance %>
-        <div class="collapse-content">
-          <p>
-            <% if disturbance.information %>
-              <b><%= disturbance.information %></b>
+  <% @gares.each do |gare| %>
+    <% @sources.where(gare: gare).each_with_index do |source, index| %>
+      <% if disturbance = source.last_disturbance %>
+        <div tabindex="0" class="collapse collapse-arrow border border-base-300 rounded-box">
+          <div class="collapse-title text-xl font-medium">
+            <span style="<%= disturbance.perturbation_style %>">
+              <%= source.sens_et_gare %>
+            </span>
+          </div>
+            <div class="collapse-content">
+              <p>
+                <% if disturbance.information %>
+                  <b><%= disturbance.information %></b>
+                  <br>
+                <% end %>
+                Train #<%= disturbance.train %>
+                <% if disturbance.sens == 'Départ' %>
+                    ->
+                    <%= disturbance.destination %>
+                <% else %>
+                    <-
+                    <%= disturbance.provenance %>
+                <% end %>
+              </p>
+              <span style="<%= disturbance.perturbation_style%>">
+                <%= disturbance.perturbation %>
+              </span>
               <br>
-            <% end %>
-            Train #<%= disturbance.train %>
-            <% if disturbance.sens == 'Départ' %>
-                ->
-                <%= disturbance.destination %>
-            <% else %>
-                <-
-                <%= disturbance.provenance %>
-            <% end %>
-          </p>
-          <span style="<%= disturbance.perturbation_style%>">
-            <%= disturbance.perturbation %>
-          </span>
-          <br>
-          <i>Enregistré <%= time_tag disturbance.created_at, "data-local": "time-ago" %></i>
+              <i>Enregistré <%= time_tag disturbance.created_at, "data-local": "time-ago" %></i>
+            </div>
         </div>
+      <% else %>
+        <% if index == 0 %>
+          <div tabindex="0" class="border border-base-300 rounded-box">
+            <div class="collapse-title text-xl font-medium">
+              <span style="color: forestgreen;">
+                <%= source.gare %>
+              </span>
+            </div>
+          </div>
+        <% end %>
       <% end %>
-    </div>
+    <% end %>
   <% end %>
   <br>
 </div>
