--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,10 +1,6 @@
 <div id="<%= dom_id user %>">
   <p class="my-5 text-xl">
-    <%= user.nom %>
-  </p>
-
-  <p class="my-5 text-xl">
-    <%= user.prénom %>
+    <%= user.nom_prénom %>
   </p>
 
   <p class="my-5">
