Arrangement de la vue Audit

--- a/app/views/audits/_audit.html.erb
+++ b/app/views/audits/_audit.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td>
-    <%= audit.created_at %>
+    <%= l audit.created_at %>
   </td>
   <td>
     <%= time_ago_in_words(audit.created_at) %>
