--- a/app/views/audits/index.html.erb
+++ b/app/views/audits/index.html.erb
@@ -1,41 +1,70 @@
-<h1 class="title is-2">
-  <i class="fas fa-search"></i>
-  Audit trail
-</h1>
+<div class="w-full">
 
-<%= form_with(url: audits_path, method: :get) do | f | %>
-  <div class="columns">
-    <div class="column"><%= f.date_field :date, value: params[:date], onchange: "this.form.submit()" %></div>
-    <div class="column"><%= f.select :user_id, options_from_collection_for_select(@users, 'id', 'email', params[:user_id]), { include_blank: true, label: "Utilisateur" }, { onchange: "this.form.submit()" } %></div>
-    <div class="column"><%= f.select :type, options_for_select(@types, params[:type]), { include_blank: true, label: "Type" }, { onchange: "this.form.submit()" } %></div>
-    <div class="column"><%= f.select :audit_action, options_for_select(@actions, params[:audit_action]), { include_blank: true, label: "Action" }, {  onchange: "this.form.submit()" } %></div>
+  <div class="flex justify-between items-center">
+    <h1 class="font-bold text-4xl mt-1 mb-4">Audit trail</h1>
   </div>
-<% end %>
-<br>
 
-<div class="table-container">
-  <table class="table is-hoverable is-striped is-fullwidth is-narrow">
-    <thead>
-      <tr>
-        <th>DateTime</th>
-        <th>Il y a</th>
-        <th>Utilisateur</th>
-        <th>Type</th>
-        <th>Id</th>
-        <th>Action</th>
-        <th>Changements</th>
-      </tr>
-    </thead>
+  <%= form_with(url: audits_path, method: :get) do | f | %>
+    <div class="flex flex-wrap xl:flex-nowrap">
+      <div class="mr-4">
+        <%= label_tag :date, "Date", class: "label" %>
+        <%= f.date_field :date, 
+                          value: params[:date], 
+                          class: 'input input-sm select-bordered w-full max-w-xs',
+                          onchange: "this.form.submit()" %>
+      </div>
+      <div class="mr-4">
+        <%= label_tag :user_id, "User", class: "label" %>
+        <%= f.select :user_id, 
+                      options_from_collection_for_select(@users, 'id', 'email', params[:user_id]),
+                      { include_blank: true, label: "Utilisateur" },
+                      class: 'input select-sm select-bordered w-full max-w-xs',
+                      onchange: "this.form.submit()" %>
+      </div>
+      <div class="mr-4">
+        <%= label_tag :type, "Type", class: "label" %>
+        <%= f.select :type, 
+                    options_for_select(@types, params[:type]),
+                    { include_blank: true, label: "Type" }, 
+                    class: 'input select-sm select-bordered w-full max-w-xs',
+                    onchange: "this.form.submit()" %>
+      </div>
+      <div class="mr-4">
+        <%= label_tag :audit_action, "Action", class: "label" %>
+        <%= f.select :audit_action, 
+                      options_for_select(@actions, params[:audit_action]),
+                      { include_blank: true, label: "Action" }, 
+                      class: 'input select-sm select-bordered w-full max-w-xs',
+                      onchange: "this.form.submit()" %>
+      </div>
+    </div>
+  <% end %>
+  <br>
 
-    <tbody>
-      <%= render partial: 'audit', collection: @audits.includes(:user) %>
-    </tbody>
+  <div class="table-container" class="my-4 overflow-x-auto">
+    <table class="table table-zebra w-full table-compact">
+      <thead>
+        <tr>
+          <th>DateTime</th>
+          <th>Il y a</th>
+          <th>Utilisateur</th>
+          <th>Type</th>
+          <th>Id</th>
+          <th>Action</th>
+          <th>Changements</th>
+        </tr>
+      </thead>
 
-    <tfoot>
-      <tr><th colspan=7></th></tr>
-    </tfoot>
-  </table>
+      <tbody>
+        <%= render partial: 'audit', collection: @audits.includes(:user) %>
+      </tbody>
+
+      <tfoot>
+        <tr><th colspan=7></th></tr>
+      </tfoot>
+    </table>
+  </div>
+
+  <%= page_entries_info @audits, entry_name: 'audit' %>
+  <%= paginate @audits %>
 </div>
-
-<%= page_entries_info @audits, entry_name: 'audit' %>
-<%= paginate @audits %>
