--- a/app/views/audits/index.html.erb
+++ b/app/views/audits/index.html.erb
@@ -65,6 +65,6 @@
     </table>
   </div>
 
-  <%= page_entries_info @audits, entry_name: 'audit' %>
+  <%= page_entries_info @audits, entry_name: 'Changement' %>
   <%= paginate @audits %>
 </div>
