--- a/app/views/sources/_source.html.erb
+++ b/app/views/sources/_source.html.erb
@@ -11,11 +11,11 @@
   </p>
 
   <p class="my-4">
-    <strong class="font-medium mb-1">Dernière collecte : </strong>
-    <%= source.collected_at %>
+    <strong class="font-medium mb-1">Dernière collecte le </strong>
+    <%= l source.collected_at %>
     <% if source.collected_at %>
       <span class="<%= ((DateTime.now.to_i - source.collected_at.to_i) > 15.minutes) ? 'bg-red-200' : 'bg-green-200' %>">
-        ( <i><%= time_tag source.collected_at, "data-local": "time-ago" %></i> )
+        (<i><%= time_tag source.collected_at, "data-local": "time-ago" %></i>)
       </span>
     <% end %>
   </p>
