navbar design / fontawesome added

--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -1,7 +1,10 @@
 <div class="w-full">
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl mt-1 mb-4">Perturbations</h1>
+    <h1 class="font-bold text-4xl mt-1 mb-4">
+      <i class="fa-solid fa-triangle-exclamation"></i>
+      Perturbations
+    </h1>
   </div>
 
   <%= form_tag disturbances_path, method: :get do %>
