--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,34 +1,82 @@
 <div class="navbar bg-base-300 sm:px-0 lg:px-20">
   <div class="navbar-start">
   </div>
-  <div class="navbar-end flex-none">
-    <ul class="menu menu-horizontal p-0">
-      <% if user_signed_in? %>
-        <li><%= link_to "Perturbations", root_path %></li>
-      <% end %>
-      <li style="white-space: nowrap;"><%= link_to "Gares en direct", status_path %></li>
-      <div class="dropdown dropdown-end">
-        <label tabindex="0" class="btn btn-ghost btn-circle avatar">
-          <div class="w-8 rounded-full">
-            <img src="https://questhowth.ie/wp-content/uploads/2018/04/user-placeholder.png" />
+  <% if user_signed_in? %>
+    <div class="navbar-end flex-none">
+      <ul class="menu menu-horizontal p-0 sm:mr-3">
+        <li>
+          <%= link_to root_path do %>
+            <i class="fa-solid fa-triangle-exclamation"></i>
+            Perturbations
+          <% end %>
+        </li>
+        <li class="whitespace-nowrap sm:mr-3">
+          <%= link_to status_path do %>
+            <i class="fa-solid fa-school-circle-exclamation"></i>
+            Gares en direct
+          <% end %>
+        </li>
+        <div class="dropdown dropdown-end mt-2">
+          <div tabindex="0" class="avatar online placeholder cursor-pointer">
+            <div class="bg-primary-focus text-neutral-content rounded-full w-8">
+              <span><%= "#{current_user.prénom.first.humanize if current_user.prénom}" %></span>
+            </div>
           </div>
-        </label>
-        <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-fit">
-          <% if user_signed_in? %>
+          <ul tabindex="0" class="menu dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-fit">
             <li><p class="font-black"><%= current_user.email %></p></li>
             <hr>
             <% if current_user.admin? %>
-              <li><%= link_to "Sources", sources_path %></li>
-              <li><%= link_to "Utilisateurs", users_path %></li>
-              <li><%= link_to "Audit trail", audits_path %></li>
+              <li>
+                <%= link_to sources_path, class:"w-full" do %>
+                  <i class="fa-solid fa-cloud-arrow-down"></i>Sources
+                <% end %>
+              </li>
+              <li>
+                <%= link_to users_path, class:"w-full" do %>
+                  <i class="fa-solid fa-users"></i>Utilisateurs
+                <% end %>
+              </li>
+              <li>
+                <%= link_to audits_path, class:"w-full" do %>
+                  <i class="fa-solid fa-search"></i>Audit trail
+                <% end %>
+              </li>
             <% end %>
             <hr>
-            <li><%= button_to "Déconnexion", destroy_user_session_path, method: :delete %></li>
-          <% else %>
-            <li><%= link_to "Connexion", new_user_session_path %></li>
+            <li data-turbo="false">
+              <%= button_to destroy_user_session_path, method: :delete, form_class:'w-full' do %>
+                <i class="fa-solid fa-right-from-bracket ml-1 mr-1"></i>
+                Déconnexion
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </ul>
+    </div>
+  <% else %>
+    <div class="navbar-end sm:mr-3">
+      <ul class="menu menu-horizontal p-0">
+        <li class="whitespace-nowrap sm:mr-3">
+          <%= link_to status_path do %>
+            <i class="fa-solid fa-school-circle-exclamation"></i>
+            Gares en direct
           <% end %>
-        </ul>
-      </div>
-    </ul>
-  </div>
+        </li>
+        <div class="dropdown dropdown-end mt-2">
+          <div tabindex="0" class="avatar offline placeholder cursor-pointer">
+            <div class="bg-primary-focus text-neutral-content rounded-full w-8">
+              <i class="fa-solid fa-user text-white"></i>
+            </div>
+          </div>
+          <ul tabindex="0" class="menu dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-fit">
+            <li>
+              <%= link_to new_user_session_path do %>
+                <i class="fa-solid fa-right-to-bracket"></i> Connexion
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </ul>
+    </div>
+  <% end %>
 </div>
