--- a/app/views/audits/index.html.erb
+++ b/app/views/audits/index.html.erb
@@ -1,7 +1,10 @@
 <div class="w-full">
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl mt-1 mb-4">Audit trail</h1>
+    <h1 class="font-bold text-4xl mt-1 mb-4">
+      <i class="fa-solid fa-search"></i>
+      Audit trail
+    </h1>
   </div>
 
   <%= form_with(url: audits_path, method: :get) do | f | %>
