--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,9 @@
 <div class="mx-auto md:w-2/3 mt-8">
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Utilisateurs</h1>
+    <h1 class="font-bold text-4xl">
+      <i class="fa-solid fa-users"></i>
+      Utilisateurs
+    </h1>
     <%= link_to '+ Utilisateur', new_user_path, class: "btn btn-sm btn-outline btn-primary" %>
   </div>
 
