--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="mx-auto md:w-2/3 mt-8">
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">
+    <h1 class="font-bold text-4xl text-primary">
       <i class="fa-solid fa-users"></i>
       Utilisateurs
     </h1>
