--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="fr" data-theme="lemonade">
+<html lang="fr" data-theme="corporate">
   <head>
-    <title>Disturbances2</title>
+    <title>Disturbances v2.1</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
