--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" data-theme="corporate">
+<html lang="fr" data-theme="winter">
   <head>
     <title>Disturbances v2.1</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
