--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-auto md:w-2/3 mt-1">
+<div class="mt-1">
   <div class="flex items-center mb-6">
     <h1 class="font-bold text-4xl text-primary">
       <i class="fa-solid fa-school-circle-exclamation"></i>
@@ -6,7 +6,7 @@
     </h1>
   </div>
 
-  <div class="grid grid-cols-5 gap-2">
+  <div class="grid grid-cols-6 gap-1">
     <% @gares.each do |nom_gare| %>
       <% @sources.where(gare: nom_gare).each_with_index do |source, index| %>
         <% if disturbance = source.last_disturbance %>
