--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -6,7 +6,7 @@
     </h1>
   </div>
 
-  <div class="grid grid-cols-6 gap-1">
+  <div class="grid lg:grid-cols-6 gap-1">
     <% @gares.each do |nom_gare| %>
       <% @sources.where(gare: nom_gare).each_with_index do |source, index| %>
         <% if disturbance = source.last_disturbance %>
