refresh auto & date maj

--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -54,3 +54,17 @@
   </div>
   <br>
 </div>
+
+<p class="font-light italic">
+  <small>
+    Dernière mise à jour :  
+    <%= l DateTime.now %>
+  <small>
+</p>
+
+<script type="text/javascript">
+  setInterval(function() {
+    window.location.reload();
+  }, 5 * 60000); 
+</script>
+
