--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -57,8 +57,8 @@
 
 <p class="font-light italic">
   <small>
-    Dernière mise à jour :  
-    <%= l DateTime.now %>
+    Dernière mise à jour : 
+    <%= time_tag DateTime.now, "data-local": "time-ago" %>
   <small>
 </p>
 
