--- a/app/views/pages/cancelled.html.erb
+++ b/app/views/pages/cancelled.html.erb
@@ -23,7 +23,7 @@
         </tr>
       </thead>
       <tbody>
-        <% @cancelled.each do |c| %>
+        <% @paginatable_cancelled.each do |c| %>
           <% cancelled = Disturbance.find_by(date: c.date, train: c.train) %>
           <tr class="hover">
             <th class="font-normal">
@@ -85,6 +85,9 @@
       </tfoot>
     </table>
   </div>
+
+  <%= page_entries_info @paginatable_cancelled, entry_name: 'suppression' %>
+  <%= paginate @paginatable_cancelled %>
 
   <p class="mt-4">
     <%= link_to 'Export XLS', url_for(params.permit!.merge(format: :xls)) %>
