paginate 25 / application variables added

--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar bg-base-300 sm:px-0 lg:px-20 justify-around">
   <div class="navbar-start">
-    <a class="normal-case font-bold">DISTURBANCES</a>
+    <a class="normal-case font-bold"><%= @sitename_short %></a>
   </div>
   <div class="navbar-center">
     <ul class="menu menu-horizontal p-0 sm:mr-3">
