--- a/app/views/pages/cancelled.html.erb
+++ b/app/views/pages/cancelled.html.erb
@@ -3,7 +3,7 @@
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl text-primary mt-1 mb-4">
       <i class="fa-solid fa-circle-xmark"></i>
-      Suppressions de trains
+      Liste des trains supprimés
     </h1>
   </div>
 
@@ -23,13 +23,21 @@
         </tr>
       </thead>
       <tbody>
+        <%= current_date ="" %>
         <% @paginatable_cancelled.each do |c| %>
           <% cancelled = Disturbance.find_by(date: c.date, train: c.train) %>
+          <% if cancelled.date != current_date %>
+            <% current_date = cancelled.date %>
+            <tr class="hover">
+              <th colspan="6">
+                <p>
+                  <%= l cancelled.date.to_date, format: :long %>
+                </p>
+              </th>
+          <% end %>
+
           <tr class="hover">
-            <th class="font-normal">
-              <p>
-                <%= l cancelled.date.to_date %>
-              </p>
+            <th>
             </th>
 
             <td>
@@ -74,7 +82,8 @@
 
               <td>
                 <p>
-                  Supprimé : <%= cancelled.information %>
+                  Supprimé
+                  <%= " : #{ cancelled.information }" if cancelled.information %>
                 </p>
               </td>
           </tr>
