--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -1,6 +1,6 @@
 <div class="mt-1">
   <div class="flex items-center mb-6">
-    <h1 class="font-bold text-4xl text-primary">
+    <h1 class="font-bold text-4xl text-success">
       <i class="fa-solid fa-school-circle-exclamation"></i>
       Gares en direct
     </h1>
