--- a/app/views/pages/cancelled.html.erb
+++ b/app/views/pages/cancelled.html.erb
@@ -11,7 +11,7 @@
   <% end %>
 
   <div id="disturbances" class="my-4 overflow-x-auto">
-    <table class="table table-zebra w-full">
+    <table class="table table-zebra table-compact w-full">
       <thead>
         <tr>
           <th>Date</th>
@@ -34,11 +34,9 @@
 
             <% if count > 0 %>
               <tr>
-                <th class="font-normal" colspan="6">
-                  <p>
-                    <%= count %>
-                  </p>
-                </th>
+                <th colspan="2"></th>
+                <th class="font-normal"><%= count %></th>
+                <th colspan="3"></th>
               </tr>
             <% end %>
             <% count = 0 %>
