--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -23,7 +23,7 @@
           <% end %>
         </li>
         <li>
-          <%= link_to stats_path do %>
+          <%= link_to stats_path, 'data-turbo': false do %>
             <i class="fa-solid fa-chart-simple"></i>
             Statistiques
           <% end %>
