--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -1,6 +1,63 @@
-<div class="shadow-lg rounded-lg overflow-hidden">
-  <div class="py-3 px-5 text-center text-2xl">Évolution du nombre de trains supprimés</div>
-  <canvas class="p-10" id="chartLine"></canvas>
+<div class="flex items-center">
+  <%= form_tag stats_path, method: :get do %>
+    <div class="flex flex-col flex-wrap xl:flex-nowrap">
+
+      <div>
+        <%= label_tag :gare, "Gare", class: "label" %>
+        <%= select_tag :gare,
+                        options_for_select(@gares, params[:gare]), 
+                        include_blank: true,
+                        class: 'select select-sm select-bordered w-full max-w-xs', 
+                        onchange: 'this.form.submit()' %>
+      </div>
+
+      <div>
+        <%= label_tag :train, "Train(s)", class: "label" %>
+        <%= text_field_tag :train,
+                        params[:train],
+                        include_blank: true,
+                        class: 'input input-sm select-bordered w-full max-w-xs',
+                        onchange: 'this.form.submit()' %>
+      </div>
+
+      <div>
+        <%= label_tag :perturbation, "Perturbation", class: "label" %>
+        <%= select_tag :perturbation, 
+                        options_for_select(@perturbations, params[:perturbation]), 
+                        include_blank: true,
+                        class: 'select  select-sm select-bordered w-full max-w-xs', 
+                        onchange: 'this.form.submit()' %>
+      </div>
+
+      <div>
+        <%= label_tag :information, "Information", class: "label" %>
+        <%= select_tag :information, 
+                        options_for_select(@informations, params[:information]), 
+                        include_blank: true,
+                        class: 'select select-sm select-bordered w-full max-w-xs', 
+                        onchange: 'this.form.submit()' %>
+      </div>
+
+      <div>
+        <%= label_tag :periode, "Période", class: "label" %>
+        <%= select_tag :periode, 
+                        options_for_select([30,60,90,120,180, 365], params[:periode]), 
+                        include_blank: true,
+                        class: 'select select-sm select-bordered w-full max-w-xs', 
+                        onchange: 'this.form.submit()' %>
+      </div>
+
+    </div>
+  <% end %>
+  <div class="w-full ml-2">
+    <div class="text-center">
+      <h1 class="text-2xl">Perturbations</h1>
+      <p>
+        <%= [params[:gare], params[:train], params[:perturbation], params[:information], params[:periode].blank? ? "" : "depuis #{params[:periode]} jours" ].compact_blank.join(', ') %>
+      </p>
+    </div>
+    <canvas class="" id="chartLine"></canvas>
+  </div>
 </div>
 
 <!-- Required chart.js -->
@@ -8,14 +65,11 @@
 
 <!-- Chart line -->
 <script>
-  const cancelled = <%= @cancelled.to_json.html_safe %>
-  console.log(cancelled)
-  // const dates = cancelled.map(e => e.date).filter((value, index, self) => self.indexOf(value) === index)
   const data = {
     labels: <%= @cancelled.keys.to_json.html_safe %>,
     datasets: [
       {
-        label: "trains supprimés",
+        label: "trains",
         backgroundColor: "hsl(252, 82.9%, 67.8%)",
         borderColor: "hsl(252, 82.9%, 67.8%)",
         data: <%= @cancelled.values.to_json.html_safe %>,
