--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -1,4 +1,4 @@
-<div class="flex items-center">
+<div class="flex flex-col lg:flex-row items-center">
   <%= form_tag stats_path, method: :get do %>
     <div class="flex flex-col flex-wrap xl:flex-nowrap">
 
@@ -51,7 +51,7 @@
   <% end %>
   <div class="w-full ml-2">
     <div class="text-center">
-      <h1 class="text-2xl">Perturbations</h1>
+      <h1 class="text-2xl">Perturbations (<%= @disturbances.values.sum %>)</h1>
       <p>
         <%= [params[:gare], params[:train], params[:perturbation], params[:information], params[:periode].blank? ? "" : "depuis #{params[:periode]} jours" ].compact_blank.join(', ') %>
       </p>
@@ -66,13 +66,13 @@
 <!-- Chart line -->
 <script>
   const data = {
-    labels: <%= @cancelled.keys.to_json.html_safe %>,
+    labels: <%= @disturbances.keys.to_json.html_safe %>,
     datasets: [
       {
         label: "trains",
         backgroundColor: "hsl(252, 82.9%, 67.8%)",
         borderColor: "hsl(252, 82.9%, 67.8%)",
-        data: <%= @cancelled.values.to_json.html_safe %>,
+        data: <%= @disturbances.values.to_json.html_safe %>,
       },
     ],
   };
